vlib/v/checker/tests/voidptr_cast_to_ref_outside_unsafe_err.vv
fn main() {
	some_ptr := voidptr(1234)
	_ = &u32(some_ptr)
	_ = &u32(voidptr(5678))
}
